# ictonyx

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  build-gpu.sh  makefile  pyproject.toml  requirements.txt  run-gpu.sh  test-gpu.sh
.github/workflows/: test.yml
docs/: conf.py  index.md  installation.md  requirements.txt
docs/_build/doctrees/: changelog.doctree  index.doctree  installation.doctree
docs/_build/doctrees/api/: index.doctree
docs/_build/html/: .buildinfo  changelog.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/ictonyx/: analysis.html  api.html  bootstrap.html  config.html  core.html  data.html  exceptions.html  explainers.html  loggers.html  memory.html  plotting.html  runners.html  tuning.html
docs/_build/html/_sources/api/: analysis.md.txt  api.md.txt  bootstrap.md.txt  config.md.txt  core.md.txt  data.md.txt  explainers.md.txt  loggers.md.txt  memory.md.txt  plotting.md.txt  runners.md.txt  tuning.md.txt
docs/_build/html/api/: analysis.html  api.html  bootstrap.html  config.html  core.html  data.html  exceptions.html  explainers.html  index.html  loggers.html  memory.html  plotting.html  runners.html  tuning.html
docs/api/: exceptions.md  index.md
examples/: 01_mnist_variability_study.ipynb  02_mnist_model_comparison.ipynb  03_learning_rate_variability.ipynb  04_pytorch_classification.ipynb  05_pytorch_regression.ipynb  06_sklearn_models.ipynb  07_run_independence.ipynb  08_sample_size.ipynb  09_huggingface_text_classification.ipynb  ictonyx_ex_1.ipynb  ictonyx_ex_2.ipynb  ictonyx_ex_3.ipynb  quickstart.ipynb
ictonyx/: __init__.py  analysis.py  api.py  bootstrap.py  config.py  core.py  data.py  exceptions.py  explainers.py  loggers.py  memory.py  plotting.py  runners.py  settings.py  tuning.py  utils.py
scripts/: benchmark.py  profile_memory.py  validate_imports.py  validate_installation.py
tests/: conftest.py  test_analysis.py  test_api.py  test_bootstrap.py  test_config.py  test_core.py  test_data.py  test_exceptions.py  test_explainers.py  test_huggingface_seeding.py  test_integration.py  test_integration_variability_study.py  test_loggers.py  test_memory.py  test_persistence.py  test_plotting.py  test_pytorch.py  test_runners.py  test_settings.py  test_tuning.py  test_utils.py  test_verbose.py
