[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ictonyx"
version = "0.2.0"
description = "Ictonyx: Iteration Comparison Testing Over N-runs: Yield eXamination"
authors = ["Stephen Kizlik <stephen.kizlik@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/skizlik/ictonyx"
repository = "https://github.com/skizlik/ictonyx"
keywords = ["machine-learning", "variability", "statistics", "model-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
scipy = "^1.10.0"
matplotlib = "^3.7.0"
seaborn = "^0.13.0"
joblib = "^1.3.0"

[tool.poetry.group.ml.dependencies]
tensorflow = "^2.16.0"
keras = "^3.0.0"
mlflow = "^2.0.0"
shap = "^0.43.0"
hyperopt = "^0.2.7"
protobuf = "<4.0.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.0"
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"
sphinx-rtd-theme = "^1.3.0"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=ictonyx --cov-report=html --cov-report=term"
