[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ictonyx"
version = "0.4.7"
description = "Ictonyx: Iteration Comparison Testing Over N-runs: Yield eXamination"
authors = ["Stephen Kizlik <stephen.kizlik@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/skizlik/ictonyx"
repository = "https://github.com/skizlik/ictonyx"
keywords = ["machine-learning", "variability", "statistics", "model-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.24.0"
pandas = ">=2.0.0"
scipy = ">=1.10.0"
matplotlib = ">=3.7.0"
seaborn = ">=0.13.0"
scikit-learn = {version = "^1.3.0", optional = true}
tqdm = {version = "^4.64.0", optional = true}
cloudpickle = {version = "^2.0.0", optional = true}
psutil = {version = "^5.9.0", optional = true}
tensorflow = {version = "^2.16.0", optional = true}
keras      = {version = "^3.0.0",  optional = true}
torch      = {version = "^2.0.0",  optional = true}
transformers = {version = ">=4.35.0", optional = true}
datasets     = {version = ">=2.14.0", optional = true}
accelerate   = {version = ">=0.24.0", optional = true}
mlflow     = {version = "^2.0.0",  optional = true}
shap       = {version = ">=0.43.0", optional = true}
hyperopt   = {version = "^0.2.7",  optional = true}
joblib     = {version = "^1.2.0",  optional = true}
optuna     = {version = "^3.0.0",  optional = true}

[tool.poetry.extras]
tensorflow = ["tensorflow", "keras"]
torch      = ["torch"]
mlflow     = ["mlflow"]
sklearn    = ["scikit-learn", "joblib"]
huggingface = ["transformers", "datasets", "accelerate", "torch"]
explain    = ["shap"]
tuning     = ["optuna"]
tuning_legacy = ["hyperopt"]
isolation  = ["cloudpickle", "psutil"]
progress   = ["tqdm"]
ml         = ["tensorflow", "keras", "torch", "mlflow", "shap", "optuna"]
all        = ["scikit-learn", "cloudpickle", "psutil", "tqdm",
              "tensorflow", "keras", "torch", "transformers", "datasets",
              "accelerate", "mlflow", "shap", "optuna", "joblib"]

[tool.poetry.group.ml.dependencies]
tensorflow = "^2.16.0"
keras = "^3.0.0"
torch = "^2.0.0"
transformers = ">=4.35.0"
datasets = ">=2.14.0"
accelerate = ">=0.24.0"
mlflow = "^2.0.0"
shap = ">=0.43.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.0"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-timeout = "^2.0.0"
black = "^24.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"
sphinx-rtd-theme = "^2.0.0"
myst-parser = "^3.0.0"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = ["slow: marks tests as slow (skip with '-m not slow')"]
addopts = "--cov=ictonyx --cov-report=html --cov-report=term --cov-fail-under=60"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = false
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_optional = true
files = ["ictonyx/"]